Version 5.0.0 Compiled with Java 17 & Vaadin 24.7.2. SOChart is now extended from LitComponentWithSize. The group Id for the artifact is renamed to com.storedobject